Feature/checkpoint (#60)
* starting work on checkpoint

* moving startup order for FileEventSource

* code tidy

* Work in progress adding cached event log to FileEventSource

* Work in progress adding cached event log to FileEventSource. Upgraded to Fluxtion 9.5.0 and Fluxtion server version 0.1.52

* Work in progress adding cached event log to ChronicleEventSource

* disable tests not working on git hub actions CI/CD.Temp file is not available

* disable tests not working on git hub actions CI/CD.Temp file is not available

* disable tests not working on git hub actions CI/CD.Temp file is not available

* disable tests not working on git hub actions CI/CD.Temp file is not available

---------

Co-authored-by: greg <gregphiggins@gmail.com>